# AISProsjektAstroids

./: CMakeLists.txt  README.md  astroids.cpp  main.cpp  vcpkg-configuration.json  vcpkg.json
include/: Astroid.hpp  BaseObject.hpp  BaseShip.hpp  CollitionDetection.hpp  Enemy.hpp  Explotion.hpp  ExplotionCreator.hpp  Game.hpp  GameLoop.hpp  Laser.hpp  LaserControls.hpp  ObjectCreator.hpp  ObjectUpdater.hpp  Ship.hpp  astroid.hpp  controls.hpp  lazarControls.hpp  objectCreator.hpp
src/: Astroid.cpp  BaseObject.cpp  BaseShip.cpp  CMakeLists.txt  CollitionDetection.cpp  Controls.cpp  Enemy.cpp  Explotion.cpp  ExplotionCreator.cpp  Game.cpp  GameLoop.cpp  Laser.cpp  LaserControls.cpp  ObjectCreator.cpp  ObjectUpdater.cpp  Ship.cpp
tests/: CMakeLists.txt  tests.cpp
